; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/ipv4/netfilter/extr_ipt_ULOG.c_ulog_tg_check.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/ipv4/netfilter/extr_ipt_ULOG.c_ulog_tg_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xt_tgchk_param = type { %struct.ipt_ulog_info* }
%struct.ipt_ulog_info = type { i8*, i8 }

@.str = private unnamed_addr constant [26 x i8] c"ipt_ULOG: prefix term %i\0A\00", align 1
@ULOG_MAX_QLEN = common dso_local global i8 0, align 1
@.str.1 = private unnamed_addr constant [42 x i8] c"ipt_ULOG: queue threshold %Zu > MAX_QLEN\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xt_tgchk_param*)* @ulog_tg_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ulog_tg_check(%struct.xt_tgchk_param* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.xt_tgchk_param*, align 8
  %4 = alloca %struct.ipt_ulog_info*, align 8
  store %struct.xt_tgchk_param* %0, %struct.xt_tgchk_param** %3, align 8
  %5 = load %struct.xt_tgchk_param*, %struct.xt_tgchk_param** %3, align 8
  %6 = getelementptr inbounds %struct.xt_tgchk_param, %struct.xt_tgchk_param* %5, i32 0, i32 0
  %7 = load %struct.ipt_ulog_info*, %struct.ipt_ulog_info** %6, align 8
  store %struct.ipt_ulog_info* %7, %struct.ipt_ulog_info** %4, align 8
  %8 = load %struct.ipt_ulog_info*, %struct.ipt_ulog_info** %4, align 8
  %9 = getelementptr inbounds %struct.ipt_ulog_info, %struct.ipt_ulog_info* %8, i32 0, i32 0
  %10 = load i8*, i8** %9, align 8
  %11 = getelementptr inbounds i8, i8* %10, i64 7
  %12 = load i8, i8* %11, align 1
  %13 = sext i8 %12 to i32
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %22

15:                                               ; preds = %1
  %16 = load %struct.ipt_ulog_info*, %struct.ipt_ulog_info** %4, align 8
  %17 = getelementptr inbounds %struct.ipt_ulog_info, %struct.ipt_ulog_info* %16, i32 0, i32 0
  %18 = load i8*, i8** %17, align 8
  %19 = getelementptr inbounds i8, i8* %18, i64 7
  %20 = load i8, i8* %19, align 1
  %21 = call i32 @pr_debug(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i8 signext %20)
  store i32 0, i32* %2, align 4
  br label %36

22:                                               ; preds = %1
  %23 = load %struct.ipt_ulog_info*, %struct.ipt_ulog_info** %4, align 8
  %24 = getelementptr inbounds %struct.ipt_ulog_info, %struct.ipt_ulog_info* %23, i32 0, i32 1
  %25 = load i8, i8* %24, align 8
  %26 = sext i8 %25 to i32
  %27 = load i8, i8* @ULOG_MAX_QLEN, align 1
  %28 = sext i8 %27 to i32
  %29 = icmp sgt i32 %26, %28
  br i1 %29, label %30, label %35

30:                                               ; preds = %22
  %31 = load %struct.ipt_ulog_info*, %struct.ipt_ulog_info** %4, align 8
  %32 = getelementptr inbounds %struct.ipt_ulog_info, %struct.ipt_ulog_info* %31, i32 0, i32 1
  %33 = load i8, i8* %32, align 8
  %34 = call i32 @pr_debug(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.1, i64 0, i64 0), i8 signext %33)
  store i32 0, i32* %2, align 4
  br label %36

35:                                               ; preds = %22
  store i32 1, i32* %2, align 4
  br label %36

36:                                               ; preds = %35, %30, %15
  %37 = load i32, i32* %2, align 4
  ret i32 %37
}

declare dso_local i32 @pr_debug(i8*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
